pr-cli/deploy/overlays/development/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pr-cli-webhook
spec:
  template:
    spec:
      containers:
      - name: pr-cli
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 256Mi
